ingress/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
spec:
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
      - name: server
        image: saifuranik/goals-backend  
        ports:
        - containerPort: 5000
        resources:                     
          requests:
            cpu: "100m"                 
          limits:
            cpu: "200m"                 

---

apiVersion: v1
kind: Service
metadata:
  name: server-clusterip
spec:
  selector:
    app: server
  ports:
  - port: 5000
    targetPort: 5000
