ingress/frontend-service.yaml


apiVersion: v1
kind: Service
metadata:
  name: frontend-clusterip
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
  - port: 3000
    targetPort: 300
