ingress/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
spec:
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
      - name: client
        image: saifuranik/goals-frontend    #akifboi/goals-frontend  #aakkiiff/goals_project_frontend:6

        ports:
        - containerPort: 3000


---


apiVersion: v1
kind: Service
metadata:
  name: client-clusterip
spec:
  type: ClusterIP
  selector:
    app: client
  ports:
  - port: 3000
    targetPort: 3000
