ingress/all.yaml


apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
spec:
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: saifuranik/backend

        ports:
        - containerPort: 5000


apiVersion: v1
kind: Service
metadata:
  name: backend-clusterip
spec:
  selector:
    app: backend
  ports:
  - port: 5000
    targetPort: 5000


apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: saifuranik/frontend

        ports:
        - containerPort: 3000


apiVersion: v1
kind: Service
metadata:
  name: frontend-clusterip
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
  - port: 3000
    targetPort: 300

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /frontend
        backend:
          service:
            name: frontend-clusterip
            port:
              number: 3000
      - pathType: Prefix
        path: /backend
        backend:
          service:
            name: backend-clusterip
            port:
              number: 5000
