ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: saifuranik.com
      http:
        paths:
          - path: /?(.*)      # Use ImplementationSpecific here
            pathType: ImplementationSpecific
            backend:
              service:
                name: client-clusterip
                port:
                  number: 3000
          - path: /api/?(.*)  # Use ImplementationSpecific here as well
            pathType: ImplementationSpecific
            backend:
              service:
                name: server-clusterip
                port:
                  number: 5000
